<resources>
    <string name="app_name">calculater</string>
    <string name="div">/</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="_3">3</string>
    <string name="_x">x</string>
    <string name="equal">=</string>
    <string name="rest_div">%</string>
    <string name="sub">-</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="_c">C</string>
    <string name="plus">+</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_2">2</string>
</resources>
